configuration/kubernetes-dashboard/kubernetes-dashboard-ingressroute-host.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kubernetes-dashboard.kippel.k3s`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      namespace: kubernetes-dashboard
      port: 443
